# VCP

./: .gitignore  .vcpignore  CMakeLists.txt  FTP.cpp  FTP.h  README.md  VCP.cpp  objects.cpp  objects.h
Server/: VCPserver.cpp  auth.cpp  auth.h  logging.cpp  logging.h  protocol.cpp  protocol.h  server_main.cpp  socket.h  storage.cpp  storage.h
